fixed some stuff
1. fixed bootstrap flex grid (check lg-grid-gutter-width with global-variable-exists)
2. separate the custom match height script to its own file
3. added some dns prefetch that are usually used
4. update main README.md
5. fixed watch.js (if it's only {js}, it won't work)
6. sass.js (discardUnused: false, for fixing fonts that are not showing if they are not used)

--- a/generators/app/templates/src/_css/02_tools/02.02_mixins/_tools.mixin.bootstrap-flex-grid.scss
+++ b/generators/app/templates/src/_css/02_tools/02.02_mixins/_tools.mixin.bootstrap-flex-grid.scss
@@ -22,7 +22,7 @@
             float: left;
         }
     
-        @if($lg-grid-gutter-width){
+        @if(global-variable-exists(lg-grid-gutter-width)){
             @include mq(lg){
                 padding-left: ceil(($lg-grid-gutter-width / 2));
                 padding-right: floor(($lg-grid-gutter-width / 2));
@@ -98,7 +98,7 @@
         @include clearfix;
     }
 
-    @if ($lg-grid-gutter-width){
+    @if (global-variable-exists(lg-grid-gutter-width)){
         @include mq(lg){
             margin-left: ceil(($lg-grid-gutter-width / -2));
             margin-right: floor(($lg-grid-gutter-width / -2));
